Fixed misaligned "View Group" button

--- a/bookface_light.css
+++ b/bookface_light.css
@@ -1,8 +1,8 @@
 /*
 	Name	   : Bookface Light
-	Version    : 1.8.1
+	Version    : 1.8.2
     Licence    : AGPL
-    Created on : 12 JULY 2025
+    Created on : 27 AUG 2025
     Author     : Pygoscelis Papua @randompenguin@friendica.world feb @feb@loma.ml Phil @phil@loma.ml
 */
 
@@ -1321,13 +1321,13 @@ aside .widget h3.p-name {
 	aside .vcard #subscribe-feed-link-button,
 	aside .vcard #dfrn-request-link-button,
 	aside .vcard #wallmessage-link-button,
-	aside .vcard #showgroup-button {
+	aside .vcard #show-group-button {
 		width: 75%;
 		float: none;
 		margin: 0 auto;
 		padding: 5px;
 	} 
-		aside .vcard #showgroup-button a {
+		aside .vcard #show-group-button a {
 			width: 100%;
 		}
 	aside .widget, .nav-container .widget {
